testing/RESTFullApiSample/Product API/api/errors/rate-limit/Demonstrates a 429 Too Many Requests error.bru
meta {
  name: Demonstrates a 429 Too Many Requests error
  type: http
  seq: 1
}

get {
  url: {{baseUrl}}/api/errors/rate-limit
  body: none
  auth: inherit
}
